# daedam

./: README.md  apidoc.md  app.py  auth.py  config.py  daedam.psql  models.py  pyproject.toml  setup.sh  tests.py  utils.py
backend/: README.md  apidoc.md  app.py  config.py  manage.py  models.py  pyproject.toml  requirements.txt  tests.py  utils.py
migrations/versions/: e2b558b328c2_.py
