[tool.poetry]
name = "yoon-daedam"
version = "0.1.0"
description = "Platform to Let the Public Initiate Intellectual Discussions"
authors = ["Sangyoon Park <datumvitae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.6.0"
flask-cors = "^3.0.10"
psycopg2-binary = "^2.8.6"
flask-script = "^2.0.6"
werkzeug = "^1.0.1"
python-jose-cryptodome = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
